add django-ckeditor to be editor & create/delete/modify functions about post

--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -1,7 +1,9 @@
 <html lang="zh-hant">
     <head>
         <title>friends</title>
-        {% include "header.html" %}
+        {% block head %}
+            {% include "header.html" %}
+        {% endblock %}
     </head>
     <body>
         {% block navbar %} {% endblock %}
