--- a/templates/main/login_form.html
+++ b/templates/main/login_form.html
@@ -8,11 +8,11 @@
                         {% csrf_token %}
                         <div class="form-group">
                             <label for="username">信箱</label>
-                            <input type="text" class="form-control" placeholder="" name="username" value="" id="username">
+                            <input type="text" class="form-control" placeholder="" name="username" value="" id="username" required="" autofocus="">
                         </div>
                         <div class="form-group">
                             <label for="password" name="password">密碼</label>
-                            <input type="password" class="form-control" placeholder="" name="password" value="" id="password">
+                            <input type="password" class="form-control" placeholder="" name="password" value="" id="password" prequired="">
                         </div>
                         <button type="button submit" class="btn btn-block btn-primary mt-5">登入</button>
                         <hr>
